<resources>
    <string name="app_name">Lab12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="correouvg">mor21785@uvg.edu.gt</string>
    <string name="login">Iniciar Sesion</string>
    <string name="nombre">Daniel Morales</string>
    <string name="defaultvalue">Default</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="empty">Empty</string>
</resources>