<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@id/ingreso_correo_profile"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingreso_correo_profile"
        app:layout_constraintTop_toBottomOf="@id/Nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margenhorizontal"
        app:layout_constraintBottom_toTopOf="@id/ingreso_contra_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop"
        android:hint="@string/correo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingreso_contra_profile"
        app:layout_constraintTop_toBottomOf="@id/ingreso_correo_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/margenhorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/botonIniciarSesion"
        android:layout_marginTop="@dimen/margintop"
        android:hint="@string/contra"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingreso_contra_profile"
        android:layout_marginHorizontal="@dimen/margenhorizontal"
        android:layout_marginTop="@dimen/margintop"
        android:visibility="gone"

        />
    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingreso_contra_profile"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margenhorizontal"
        android:layout_marginTop="@dimen/margintop"
        />

    <androidx.constraintlayout.utils.widget.MotionLabel
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margintop"
        android:textColor="@color/black"
        android:text="@string/correouvg"/>

</androidx.constraintlayout.widget.ConstraintLayout>